Slimes, immuniutieis fake player damage immuniteius

--- a/src/main/resources/assets/bossraids/lang/en_us.json
+++ b/src/main/resources/assets/bossraids/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "block.bossraids.keystone": "Boss Keystone"
+    "block.bossraids.keystone": "Boss Keystone",
+    "bossraid.flying_disabled": "Flying is not allowed during this Boss Raid"
 }
